# rustic-backend

./: Cargo.toml  Dockerfile.admin  Dockerfile.api  Dockerfile.pipeline  README.md  deploy.sh
crates/rustic-agent/: Cargo.toml  README.md
crates/rustic-agent/examples/: completion.rs  completion_with_mcp.rs  completion_with_tools.rs
crates/rustic-agent/examples/tools/: get_weather.rs  mod.rs
crates/rustic-agent/src/: lib.rs
crates/rustic-agent/src/agents/: agent.rs  domain.rs  helper.rs  mod.rs  pipeline_runner.rs  runner.rs
crates/rustic-agent/src/client/: llm.rs  message.rs  mod.rs  preset.rs  provider.rs  request.rs  response.rs  tools.rs
crates/rustic-agent/src/providers/: mod.rs
crates/rustic-agent/src/providers/anthropic/: completion.rs  request.rs
crates/rustic-agent/src/providers/fireworks/: completion.rs  mod.rs
crates/rustic-agent/src/providers/gemini/: chunk.rs  completion.rs  helper.rs  mod.rs  request.rs  response.rs
crates/rustic-agent/src/providers/groq/: completion.rs  mod.rs
crates/rustic-agent/src/providers/mistral/: completion.rs  mod.rs
crates/rustic-agent/src/providers/openai/: completion.rs  request.rs  response.rs
crates/rustic-agent/src/providers/together/: completion.rs  mod.rs
crates/rustic-agent/src/services/: agent.rs  builder.rs
crates/rustic-agent/src/services/config/: agent.rs  provider.rs
crates/rustic-agent/src/services/registry/: agent.rs  provider.rs
crates/rustic-agent/src/tools/: mcp.rs  response.rs
crates/rustic-boot/: Cargo.toml  README.md
crates/rustic-boot/src/: boot.rs  config.rs  lib.rs  schema.rs
crates/rustic-boot/src/auth/: firebase.rs
crates/rustic-boot/src/config/: load.rs
crates/rustic-boot/src/conversation/: domain.rs  dto.rs  helper.rs  mod.rs  service.rs
crates/rustic-boot/src/routes/: agents.rs  conversation.rs  mod.rs  providers.rs  templates.rs
crates/rustic-boot/src/storage/: manager.rs
crates/rustic-core/: Cargo.toml  README.md
crates/rustic-core/src/: lib.rs  logger.rs
crates/rustic-core/src/config/: load.rs  mod.rs
crates/rustic-core/src/http/: error.rs  http.rs  mod.rs
crates/rustic-core/src/utils/: dec_utils.rs  float_utils.rs  mod.rs  serde_utils.rs
crates/rustic-core/tests/: http_tests.rs
crates/rustic-economic/: Cargo.toml  README.md
crates/rustic-economic/src/: domain.rs  lib.rs  pipeline.rs  schema.rs  service.rs  storage.rs
crates/rustic-economic/src/core/: bea.rs  census.rs  fred.rs  helper.rs  mod.rs
crates/rustic-economic/src/domain/: bea.rs  census.rs  config.rs  fred.rs  mod.rs
crates/rustic-economic/src/storage/: mod.rs  reader.rs  writer.rs
crates/rustic-economic/src/storage/mongo/: bea.rs  census.rs  fred.rs  manager.rs  mod.rs  reader.rs  writer.rs
crates/rustic-economic/src/tools/: bea.rs  bea_nipa.rs  bea_regional.rs  census.rs  domain.rs  fred.rs  mod.rs  taxonomy.rs
crates/rustic-economic/tests/: economic_manager.rs  tools.rs
crates/rustic-economic/tests/fixtures/: tool_bea_nipa.json  tool_bea_regional.json  tool_bea_regional_cainc1.json  tool_bea_regional_cainc1_county.json  tool_bea_regional_cainc1_national.json  tool_bea_regional_cainc1_state.json  tool_bea_regional_cainc4.json  tool_bea_regional_cainc5n_county.json  tool_bea_regional_cainc5n_state.json  tool_census.json  tool_fred_series.json
crates/rustic-finance/: README.md
crates/rustic-finance/src/: lib.rs  schema.rs  service.rs
crates/rustic-finance/src/core/: helper.rs  mod.rs  pipeline.rs
crates/rustic-finance/tests/: mango_manager.rs  tools.rs
crates/rustic-ml/: Cargo.toml  README.md
crates/rustic-ml/src/: lib.rs
crates/rustic-ml/src/embeddings/: candle.rs  client.rs  gemini.rs  mod.rs  openai.rs
crates/rustic-ml/src/ml/: mod.rs
crates/rustic-ml/src/ml/predictions/: helper.rs  input.rs  mod.rs  trainer.rs  traits.rs
crates/rustic-ml/src/ml/predictions/models/: lr.rs  mod.rs
crates/rustic-ml/src/search/: similarity.rs
crates/rustic-providers/: Cargo.toml  README.md
crates/rustic-providers/src/: lib.rs
crates/rustic-storage/: Cargo.toml  README.md
crates/rustic-storage/examples/: concurrent.rs  database.rs  repo.rs
crates/rustic-storage/examples/common/: models.rs
crates/rustic-storage/src/: lib.rs
crates/rustic-storage/src/core/: index.rs  mod.rs  repository.rs  search.rs
crates/rustic-storage/src/file/: collections.rs  database.rs  errors.rs  file.rs  mod copy.rs  mod.rs  repository.rs  sort.rs  utils.rs
crates/rustic-storage/src/mongo/: critera.rs  database.rs  error.rs  mod.rs  repository.rs
crates/rustic-tools/src/: lib.rs
data/agenticdb/chats/: 343a6cf7-a8fb-4b09-ae89-109a35a1fe85.json  76fafd9d-72cb-404d-ac44-83be0e3dd6cd.json  82c42b28-6a9d-4760-970a-ad9b156bfc03.json  8ade9f11-aaff-4f3f-af2b-7458a3057cb2.json  90ba2c16-d721-425d-84ad-f16fe032e2d1.json  a019ec3a-64f1-4165-9e12-459e17f25d9e.json  affd26dc-ba85-40be-b08d-81fcf9ad3554.json  b9358382-9cd6-4baf-8f00-76253e42811f.json  c3c2e554-c773-4873-a6a5-0bbfae840c1e.json  d21cde79-cabd-46a7-b371-c25986c04fd9.json  fa745c6e-9ab3-445d-9b24-bdfde0d54dfd.json
data/config/: agents.json  agents_master.json  agents_old.json  chat_templates.json  mcp_servers_config.json  providers.json  providers_master.json  tools.json
data/config/tools/: ticker-indicators-desc.md  ticker-peers-desc.md  ticker-price-history-desc.md  ticker-screener-desc.md  ticker-sentiment-desc.md  ticker-similarity-desc.md  ticker-snapshot-desc.md  ticker-taxonomy-desc.md
data/economic/: bea_data_list.json  economic_data.json  fred_cpi.json
data/logs/: finance-orchestrator-openai.txt  gemini_pipeline_response_1.txt  gemini_response_time.txt  openai_finance_orchestrator.txt
data/mcp/: alph_test.json  alpha_mcp.json  alpha_mcp_tool_list_response.json  alpha_overview_response.json  alpha_time_series_daily.json  mcp.txt
data/messages/: anthropic.error.json  anthropic.json  gemini.json  gemini_streaming.json  openai.json
data/prompts/: agentic_build_prompt.txt  computer_scientist.txt  concurrency.txt  eigth_grade_math_quiz.txt  equity_research_analyst.txt  rust_expert.txt
(+91 files in other folders)
