[workspace]
resolver = "2"
members = ["bin/api"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
axum = { version = "0.8.8", features = ["macros"] }
bson = { version = "3.1", features = ["serde", "chrono-0_4", "serde_with-3"] }
chrono = { version = "0.4", features = ["serde"] }

futures = "0.3"
futures-util = "0.3.31"
google-cloud-storage = { version = "0.20", features = ["default"] }

jsonwebtoken = "9"

mongodb = { version = "3.5.1", features = ["bson-3"] }

reqwest = { version = "0.12.28", features = ["json", "stream", "multipart"]}
serde_with = { version = "3.0", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"

tempfile = "3"
tracing = {version = "0.1.40"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.6.8", features = ["cors"]}
uuid = { version = "1.0", features = ["v4"] }

#storage-core = { path = "../libs/storage-core-rs" }
#agentic-core = { path = "../libs/agentic-core-rs" }
#agentic-boot = { path = "../libs/agentic-boot" }

fin-analyse = { path = "../fin-tracker-backend-rs/crates/fin-analyse" }
fin-storage = { path = "../fin-tracker-backend-rs/crates/fin-storage" }

storage-core = { git = "https://github.com/rkapps/storage-core-rs" }
agentic-core = { git = "https://github.com/rkapps/agentic-core-rs" }
agentic-boot = { git = "https://github.com/rkapps/agentic-boot" }
