[workspace]
resolver = "2"
members = [
    "bin/api", "bin/pipeline", 
    "crates/rustic-agent",
    "crates/rustic-boot", 
    "crates/rustic-core", 
    "crates/rustic-economic", 
    "crates/rustic-ml",
    "crates/rustic-providers", 
    "crates/rustic-storage" , 
    "crates/rustic-finance"
, "bin/admin"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.8.8", features = ["macros"] }
bson = { version = "3.1", features = ["serde", "chrono-0_4", "serde_with-3"] }
calamine = "0.24"
candle-core = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
clap = { version = "4", features = ["derive"] }
crc32fast = "1.5.0"
criterion = "0.5"
eventsource-stream = "0.2.3"

futures = "0.3"
futures-util = "0.3.31"
google-cloud-storage = { version = "0.20", features = ["default"] }
hf-hub = { version = "=0.3.0", features = ["tokio"] }

jsonwebtoken = "9"
mongodb = { version = "3.5.1", features = ["bson-3"] }
once_cell = "1.18"

reqwest = { version = "0.12.28", features = ["json", "stream", "multipart"]}
rust_decimal = { version = "1.40", features = ["serde"] }
rust_decimal_macros = "1.40.0"

serde_with = { version = "3.0", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"
ta = "0.5"

tokenizers = "0.19"
tempfile = "3"
thiserror = "2.0"
tracing = {version = "0.1.40"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = {version = "0.6.8", features = ["cors"]}
uuid = { version = "1.0", features = ["v4"] }

# test dependencies
wiremock = "0.6"
tokio-test = "0.4"

rustic-agent = { path = "crates/rustic-agent" }
rustic-boot = { path = "crates/rustic-boot" }
rustic-core = { path = "crates/rustic-core" }
rustic-ml = { path = "crates/rustic-ml" }
rustic-providers = { path = "crates/rustic-providers" }
rustic-storage = { path = "crates/rustic-storage" }
rustic-economic = { path = "crates/rustic-economic" }
rustic-finance = { path = "crates/rustic-finance" }

# patch — use local rustic crates instead of what fin-tracker pulls from git
#[patch."https://github.com/rkapps/rustic-ai-backend-rs"]
#rustic-agent   = { path = "crates/rustic-agent" }
#rustic-boot    = { path = "crates/rustic-boot" }
#rustic-core    = { path = "crates/rustic-core" }
#rustic-ml      = { path = "crates/rustic-ml" }
#rustic-providers = { path = "crates/rustic-providers" }
#rustic-storage = { path = "crates/rustic-storage" }
#rustic-economic = { path = "crates/rustic-economic", default-features = false }
#rustic-finance = { path = "crates/rustic-finance", default-features = false }


