[package]
name = "rustic-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace=true
async-trait.workspace=true
async-stream.workspace=true

eventsource-stream.workspace=true
futures-util.workspace=true
futures.workspace=true
reqwest.workspace=true
serde.workspace=true
serde_json.workspace=true
tokio.workspace=true
tokio-stream.workspace=true
tracing.workspace=true

# local crates
rustic-core.workspace=true

[[example]]
name = "completion"
path = "examples/completion.rs"