[package]
name = "rustic-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace=true
axum.workspace=true
chrono.workspace=true
futures.workspace=true
google-cloud-storage.workspace=true
jsonwebtoken.workspace=true
reqwest.workspace=true
serde.workspace=true
serde_json.workspace=true
tempfile.workspace=true
tokio.workspace=true
tower-http.workspace=true
tracing.workspace=true
uuid.workspace=true

# local crates
rustic-core.workspace=true
rustic-agent.workspace=true
rustic-storage.workspace=true
