[package]
name = "rustic-economic"
version = "0.1.0"
edition = "2024"

[dependencies]
rustic-core.workspace=true
rustic-providers.workspace=true
rustic-storage.workspace=true
async-trait.workspace=true
chrono.workspace=true
serde.workspace=true
serde_json.workspace=true
tokio.workspace=true
anyhow.workspace=true
tracing.workspace=true

