[package]
name = "rustic-ml"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow.workspace = true
async-trait.workspace = true
candle-core.workspace=true
candle-transformers.workspace=true
chrono.workspace=true
hf-hub.workspace = true
reqwest.workspace=true
serde.workspace=true
serde_json.workspace=true
tokenizers.workspace=true
tokio.workspace=true
tracing.workspace=true


# local crates
rustic-core.workspace=true
