[package]
name = "rustic-storage"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow.workspace=true
async-trait.workspace = true
bson.workspace=true
chrono.workspace=true
crc32fast.workspace=true
futures.workspace=true
mongodb.workspace=true
rust_decimal.workspace=true
serde.workspace=true
serde_json.workspace=true
tokio.workspace=true
thiserror.workspace=true
tracing.workspace=true


# local crates
rustic-ml.workspace=true
rustic-core.workspace=true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
once_cell = "1.18"

